# gravid

./: CMakeLists.txt  README
cmake/: FindFFMPEG.cmake
include/: cmdLineParser.h  colorFilter.h  common_gravid.h  edgeDetection.h  exceptions.h  openCLProgram.h  threads.h  types.h  video.h  videoReader.h  videoWriter.h  writePPM.h
include/codec/: videoReader.h  videoWriter.h
include/cpu_effects/: FadingEffects.h  colorFilter.h  echoEffect.h  edgeDetection.h
include/opencl/: blendPipeline.h  doubleBuffer.h  executionLogic.h  fadePipeline.h  kernel.h  kernelExecutor.h  memoryManager.h  openCLProgram.h  videoPipeline.h
include/visual/: glDisplayer.h  writePPM.h
src/: cmdLineParser.cpp  common.cpp  main.cpp  main_lars.cpp  main_markus.cpp  main_testing.cpp  sobel-cpu.cpp  sobel-cpu.h  threads.cpp  video.cpp  writePPM.cpp
src/codec/: videoReader.cpp  videoWriter.cpp
src/cpu_effects/: FadingEffects.cpp  colorFilter.cpp  echoEffect.cpp  edgeDetection.cpp
src/opencl/: blendPipeline.cpp  doubleBuffer.cpp  executionLogic.cpp  fadePipeline.cpp  kernel.cpp  kernelExecutor.cpp  memoryManager.cpp  openCLProgram.cpp  videoPipeline.cpp
src/opencl/kernels/: colorFilters.cl  echoEffect.cl  fade_effects.cl  image_effects.cl  sobel.cl  video_effects.cl
src/visual/: glDisplayer.cpp  writePPM.cpp
videos/: video1.mpg
